improvemente: adiciona meta-descrição à página.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Precisa de ajuda ou quer oferecer um serviço? Encontre no Helping Hands diaristas, eletricistas, aulas e dezenas de outros profissionais na sua comunidade. Conecte-se agora!" />
     <title>Helping Hands</title>
   </head>
   <body>
